@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.0">
+	<file source-language="en" datatype="plaintext" original="messages" date="2011-10-17T20:22:35Z" product-name="sr_feuser_register">
+		<header/>
+		<body>
+			<trans-unit id="Conflicting_extensions_installed" xml:space="preserve">
+				<source>Conflicting extensions installed</source>
+			</trans-unit>
+			<trans-unit id="none" xml:space="preserve">
+				<source>None</source>
+			</trans-unit>
+			<trans-unit id="keys" xml:space="preserve">
+				<source>Extension keys:</source>
+			</trans-unit>
+			<trans-unit id="uninstall" xml:space="preserve">
+				<source>Conflicting extensions should be uninstalled for Front End User Registration to function correctly.</source>
+			</trans-unit>
+			<trans-unit id="Required_extensions_not_installed" xml:space="preserve">
+				<source>Required extensions not installed</source>
+			</trans-unit>
+			<trans-unit id="install" xml:space="preserve">
+				<source>Required extensions should be installed for Front End User Registration to function correctly.</source>
+			</trans-unit>
+			<trans-unit id="Front_end_login_security_level" xml:space="preserve">
+				<source>Front end login security level</source>
+			</trans-unit>
+			<trans-unit id="must_be_normal_or_rsa" xml:space="preserve">
+				<source>Use the Install tool to set Front end login security level ($TYPO3_CONF_VARS['FE']['loginSecurityLevel']) to "normal" or to "rsa".</source>
+			</trans-unit>
+			<trans-unit id="Salted_passwords_in_front_end" xml:space="preserve">
+				<source>Salted passwords in front end</source>
+			</trans-unit>
+			<trans-unit id="enabled" xml:space="preserve">
+				<source>Enabled</source>
+			</trans-unit>
+			<trans-unit id="disabled" xml:space="preserve">
+				<source>Disabled</source>
+			</trans-unit>
+			<trans-unit id="salted_passwords_must_be_enabled" xml:space="preserve">
+				<source>For Front End User Registration to function correctly, extension "saltedpasswords" must be installed and must be configured so that salted passwords are enabled in front end. Note that if FE login security level ($TYPO3_CONF_VARS['FE']['loginSecurityLevel']) is not set to "normal" or to "rsa", salted passwords cannot be enabled in front end.</source>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
