@@ -1,6 +1,7 @@
 2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded
 	* Add feature #35878: Issue error message if FE login security level is not set to "normal" or to "rsa"
+	* Add feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
 
 2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 1 to feature #35805: Require system extension adodb
